==Latest==
* Implemented ATA Device size limit for the CFFA card
* Fixed OE framework update problem
* Implemented libdiskimage VDI and VMDK support
* Implemented force write protected in ATADevice
* Fixed libdiskimage GCR53
* Renamed VideoRAM to VRAM
* Fixed CFFA ATA identify
* Fixed keyboard UNICODE + Apple II madness
* Removed BankSwitchedRAM, added bank switching to AddressOffset
* Implemented ATADevice
* Refactorized RDCFFA+RDCFFA1 into ATAController and RDCFFA
* Fixed minor bug in component lifecycle
* Fixed Apple II mouse capture
* Used AddressMapper in self-mapping peripheral cards
* Implemented sample-accurate playback in audio player
* Implemented Apple Silentype printer
* Implemented Apple Silentype Interface Card
* Fixed Apple Graphics Tablet count bits 0-2
* Implemented Apple Graphics Tablet
* Improved Apple II slot $C800-$CFFF memory management
* Improved video inhibition so video is only rendered when displayed
* Fixed dragging a disk image to a canvas does not mount when canvas is not in focus
* Fixed Videx Videoterm video refresh
* Fixed Videx Videoterm so display is updated when monitor is plugged in
* Fixed problem in JoystickMapper when an input device was switched
* Fixed rainbow Apple II video test
* Implemented R&D CFFA EEPROM in $C800-$C81F
* Implemented backspace to eject a disk image
* Fixed AppleIIVideo color carrier
* Fixed R&D CFFA
* Fixed MC6845 special register value cases
* Implemented Videx Videoterm video
* Refactorized AppleIIVideo
* Fixed Apple language card
* Implemented Apple Silentype interface card
* Implemented Videx Videoterm card
* Implemented Apple Graphics Tablet interface card
* Implemented Apple Language Card
* Implemented AppleIISlotMemory
* Implemented R&D CFFA card
* Implemented low-level FDI format decoding
* Implemented FDI format Huffman compression
* Improved OE common function and type names
* Added applesoft-lite 0.4 to Briel Replica-1
* Added libdiskimage support to CFFA1
* Refactorized libdiskimage