@@ -1,4 +1,6 @@
 ==Latest==
+* Fixed Videoterm not showing video after installing, adding monitor and doing PR#3
+* Fixed Videoterm last line
 * Implemented ATA Device size limit for the CFFA card
 * Fixed OE framework update problem
 * Implemented libdiskimage VDI and VMDK support
